# py-aws-client

./: .gitignore  LICENSE  Pipfile  README.md  pyvenv.cfg  requirements.txt  setup.cfg  setup.py
py_aws_client/: pyawsclient.py
py_aws_client/clients/: asg.py  cloudtrail.py  cloudwatch.py  config.py  dynamodb.py  ec2.py  ecs.py  elbv2.py  glue.py  iam.py  s3.py  secrets_manager.py  ses.py  sns.py  sqs.py  ssm.py
tests/integration/: asg_tests.py  cloudtrail_tests.py  cloudwatch_tests.py  config_tests.py  dynamodb_tests.py  ec2_tests.py  elbv2_tests.py  glue_tests.py  iam_tests.py  ses_tests.py  ssm_tests.py
tests/unit/: ssm_unit_tests.py
