[metadata]
name = py-aws-client
version = 0.0.4
description = A wrapper for the customization of the boto3, a Python AWS SDK
long_description = file: README.md, LICENSE.md
keywords =
    aws
    boto3
    python
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
;package_dir=
;    =py_aws_client
packages=find:
zip_safe = False

[options.packages.find]
;where=py_aws_client
exclude =
    examples*
    tests*
    .env*
    venv*
    py_aws_client.tests*

[project.urls]
Homepage = https://github.com/ladycami/py-aws-client
Bug Tracker = https://github.com/ladycami/py-aws-client/issues